syntax = "proto3";
package io.harness;
option java_multiple_files = true;

enum Team {
  OTHER = 0;
  CD = 1;
  CV = 2;
  CI = 3;
  FFM = 4;
  PIPELINE = 5;
  PL = 6;
  GTM = 7;
}

message NotificationRequest {
  string accountId = 2;
  Team team = 3;
  string id = 4;

  oneof channel {
    Slack slack = 5;
    Email email = 6;
    PagerDuty pagerDuty = 7;
    MSTeam msTeam = 8;
  }

  message Slack {
    repeated string slackWebHookUrls = 7;
    repeated string userGroupIds = 8;
    repeated UserGroup userGroup = 9;
    map<string, string> templateData = 4;
    string templateId = 3;
  }

  message Email {
    repeated string emailIds = 7;
    repeated string userGroupIds = 8;
    repeated UserGroup userGroup = 9;
    map<string, string> templateData = 4;
    string templateId = 3;
  }

  message PagerDuty {
    repeated string pagerDutyIntegrationKeys = 7;
    repeated string userGroupIds = 8;
    repeated UserGroup userGroup = 9;
    map<string, string> templateData = 4;
    string templateId = 3;
  }

  message MSTeam {
    repeated string msTeamKeys = 7;
    repeated string userGroupIds = 8;
    repeated UserGroup userGroup = 9;
    map<string, string> templateData = 4;
    string templateId = 3;
  }

  message UserGroup {
    string identifier = 1;
    string orgIdentifier = 2;
    string projectIdentifier = 3;
  }
}